--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,19 @@ body{
     background-size: cover;
 }
 
-@media (max-width: 700px) {
+@media screen and (max-width: 700px) {
     body {
         background-image: url(images/Records.jpg);
     }
 }
 
-@media (min-width: 701px) and (max-width: 1024px) {
+@media screen and (min-width: 701px) and (max-width: 1024px) {
     body {
         background-image: url(images/PolaroidWall.jpg);
     }
 }
 
-@media (min-width: 1025px) {
+@media screen and (min-width: 1025px){
     body {
 	    background-image: url(images/RecordWall.jpg);
    }
@@ -72,7 +72,7 @@ nav ul li a.active {
 .body-background{
     height: 1000px;
     width: 100%;
-    background-color: white;
+    background-color: #ffe8a9da;
 }
 
 
@@ -322,6 +322,7 @@ text-align: center;
 
 .player{
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(26, 26, 26, 0.253);
     z-index: 1;
     text-align: center;
