--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,37 @@ body{
     background-size: cover;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 700px) and (orientation: portrait) {
     body {
         background-image: url(images/Records.jpg);
     }
 }
 
-@media screen and (min-width: 701px) and (max-width: 1024px) {
+@media (max-width: 700px) and (orientation: landscape) {
+    body {
+        background-image: url(images/Records.jpg);
+    }
+}
+
+@media screen and (min-width: 701px) and (max-width: 1024px) and (orientation: portrait) {
     body {
         background-image: url(images/PolaroidWall.jpg);
     }
 }
 
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 701px) and (max-width: 1024px) and (orientation: landscape) {
+    body {
+        background-image: url(images/PolaroidWall.jpg);
+    }
+}
+
+@media screen and (min-width: 1025px) and (orientation: portrait) {
+    body {
+	    background-image: url(images/RecordWall.jpg);
+   }
+}
+
+@media screen and (min-width: 1025px) and (orientation: landscape) {
     body {
 	    background-image: url(images/RecordWall.jpg);
    }
