--- a/home/styles.css
+++ b/home/styles.css
@@ -1,5 +1,10 @@
 body{
     margin: 0;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .header-background{
@@ -34,57 +39,14 @@ body{
    }
 }
 
-nav {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #ffce48;
-}
-  
-nav ul li {
-    float: right;
-    width: 20%;
-}
-  
-nav ul li a {
-    display: block;
-    color: #FF624C;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-  
-nav ul li a:hover:not(.active) {
-    background-color: #459195;
-}
-  
-nav ul li a.active {
-    background-color: #459195;
-}
 
 
 /*what even are these.......................*/
 
-.nav-label{
-    margin-bottom: 10px;
-    margin-top: -10px;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-}
-
-
-
-
 .body-background{
     height: 1000px;
     width: 100%;
-    background-color: #ffe8a9da;
+    background-color: #ead392;
 }
 
 /*?.........................................*/
@@ -163,7 +125,7 @@ nav ul li a.active {
 
 
 .cover {
-    z-index: 4;
+    z-index: -1;
     text-align: center;
     position: -webkit-sticky;
     position: sticky;
@@ -201,7 +163,7 @@ nav ul li a.active {
   .sleeve {
     position: -webkit-sticky;
     position: sticky;
-    z-index: 3;
+    z-index: -2;
     text-align: center;
   }
 
@@ -269,7 +231,7 @@ nav ul li a.active {
 .record{
 position: -webkit-sticky;
 position: sticky;
-z-index: 2;
+z-index: -3;
 text-align: center;
 }
 
@@ -332,7 +294,7 @@ text-align: center;
 
 .player{
     background-color: transparent;
-    z-index: 1;
+    z-index: -5;
     text-align: center;
 }
 
@@ -361,7 +323,9 @@ text-align: center;
 }
 
 .player img{
-    z-index: 1;
+    z-index: -5;
+    position: relative;
+
 }
 
 @media (max-height: 360px){
@@ -399,3 +363,219 @@ text-align: center;
         padding-left: 49.8px;
     }
 }
+
+.logo-top{
+    position: fixed;
+    z-index: 999;
+    top: calc(10px + 1vh);
+    margin-left: calc(15px + 1vw);
+    background: url(../images/logo-cropped.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 9999;
+}
+
+@media (max-height: 360px){
+    .logo-top {
+        height: 42px;
+        width: 52px;
+    }
+}
+
+@media (min-height: 361px) and (max-height: 600px){
+    .logo-top {
+        height: 48px;
+        width: 60px;
+    }
+}
+
+@media (min-height: 601px){
+    .logo-top {
+        height: 64px;
+        width: 80px;
+    }
+}
+
+@media (max-width: 700px) and (min-height: 601px){
+    .logo-top {
+        height: 48px;
+        width: 60px;
+    }
+}
+
+#BtnContain{
+    display: none;
+    position: fixed;
+    height: 80px;
+    width: 80px;
+    bottom: 20px;
+    right: -35px;
+    border: none;
+    outline: none;
+    z-index: 999;
+    overflow: hidden;
+    border-radius: 50%;
+    background: url(../images/Top.png);
+    background-position: left;
+    background-repeat: none;
+    background-size: contain;
+    transition: ease .8s;
+    cursor: pointer;
+}
+
+#myBtn {
+    width: auto;
+    height: 80px;
+    align-items: left;
+    filter: invert(100%);
+    opacity: 1;
+    transition: opacity .2s linear;
+  }
+  
+  #myBtn:hover {
+    opacity: 0;
+  }
+
+#menu li a {
+    text-decoration: none;
+    color: #FF624C;
+    opacity: 1;
+    font-family: 'work sans', sans serif;
+    font-size: 1.5em;
+    font-weight: 400;
+    transition: 200ms;
+  }
+#menu li a:hover {
+    color: #ffce48;
+  }
+  ul {
+    padding: 0;
+    list-style-type: none;
+  }
+
+  nav {
+    background-color: transparent;
+    height: 65px;
+    position: fixed;
+    top: 0;
+    width: 80px;
+    float: right;
+  }
+
+.navbox{
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    z-index: 999;
+    margin-bottom: -100vh;
+    position: fixed;
+    top: 0;
+}
+  
+  #menuToggle {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+  }
+  
+  #menuToggle input
+  {
+    display: flex;
+    width: 34px;
+    height: 32px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    margin-top: -10px;
+    margin-left: -2px;
+  }
+  
+  #menuToggle span
+  {
+    display: flex;
+    width: 28px;
+    height: 2.5px;
+    margin-bottom: 4.2px;
+    position: relative;
+    background: #ffffff;
+    border-radius: 3px;
+    z-index: 1;
+    box-shadow: #FF614B 1.6px 1.6px 0px;
+    transform-origin: 4.4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+  
+  #menuToggle span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
+  
+  #menuToggle span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
+  
+  #menuToggle input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-3.5px, -1px);
+    background: #36383F;
+    box-shadow: none;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+  #menuToggle input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  
+  #menu
+  {
+    position: fixed;
+    height: calc(100vh - 100px);
+    box-shadow: 0 0 10px #5b5c5e;
+    top: -16px;
+    padding: 50px;
+    padding-top: 100px;
+    padding-bottom: 0;
+    background-color: #F5F6FA;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+
+  @media screen and (max-width: 500px) {
+    #menu {
+        width: calc(100vw - 98px);
+        margin-left: calc(-100vw + 54px);
+    }
+}
+  
+@media screen and (min-width: 501px) {
+    #menu {
+        width: 300px;
+        margin-left: -345px;
+    }
+}
+  #menu li
+  {
+    padding: 10px 0;
+    transition-delay: 2s;
+  }
+  
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
+  }
