--- a/about/about.css
+++ b/about/about.css
@@ -6,8 +6,6 @@ body{
     display: none;
 }
 
-/* Background changes with resizing*/
-
 .header-background{
     margin: 0;
     background-position: center center;
@@ -30,38 +28,10 @@ body{
     align-items: center;
     justify-content: center;
 }
+
 .loader img{
     width: 250px;
     height: 250px;
-}
-
-@media screen and (max-width: 700px) {
-    .header-background {
-        background-image: url(../images/HunterEyeCuriosities.jpeg);
-    }
-}
-
-@media screen and (min-width: 701px) and (max-width: 1024px) {
-    .header-background {
-        background-image: url(../images/Hunter.jpg);
-    }
-}
-
-@media screen and (min-width: 1025px) {
-    .header-background {
-	    background-image: url(../images/HunterAndCamGuitar.jpg);
-   }
-}
-
-.body-background{
-    width: 100%;
-    background-color: white;
-    height: 200vh;
-    margin-bottom: -100vh;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    z-index: -999;
 }
 
 .logo-top{
@@ -73,34 +43,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-@media (max-height: 360px){
-    .logo-top {
-        height: 42px;
-        width: 52px;
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .logo-top {
-        height: 48px;
-        width: 60px;
-    }
-}
-
-@media (min-height: 601px){
-    .logo-top {
-        height: 64px;
-        width: 80px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .logo-top {
-        height: 48px;
-        width: 60px;
-    }
+    filter: drop-shadow(0 0 5px #0000002e)
 }
 
 #BtnContain{
@@ -130,13 +73,13 @@ body{
     filter: invert(100%);
     opacity: 1;
     transition: opacity .2s linear;
-  }
+}
   
-  #myBtn:hover {
+#myBtn:hover {
     opacity: 0;
-  }
+}
 
-#menu li a {
+.menu li a {
     text-decoration: none;
     color: #FF624C;
     opacity: 1;
@@ -144,25 +87,27 @@ body{
     font-size: 1.5em;
     font-weight: 400;
     transition: 200ms;
-  }
-#menu li a:hover {
+}
+
+.menu li a:hover {
     color: #ffce48;
-  }
-  ul {
+}
+
+ul {
     padding: 0;
     list-style-type: none;
-  }
+}
 
-  nav {
+nav {
     background-color: transparent;
     height: 65px;
     position: fixed;
     top: 0;
     width: 80px;
     float: right;
-  }
+}
 
-.navbox{
+.navbox {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
@@ -172,17 +117,16 @@ body{
     top: 0;
 }
   
-  #menuToggle {
+.menuToggle {
     position: fixed;
     top: 25px;
     right: 25px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
-  }
+}
   
-  #menuToggle input
-  {
+.menuToggle input {
     display: flex;
     width: 34px;
     height: 32px;
@@ -192,10 +136,9 @@ body{
     z-index: 2;
     margin-top: -10px;
     margin-left: -2px;
-  }
+}
   
-  #menuToggle span
-  {
+.menuToggle span {
     display: flex;
     width: 28px;
     height: 2.5px;
@@ -209,38 +152,33 @@ body{
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
-  }
+}
   
-  #menuToggle span:first-child
-  {
+.menuToggle span:first-child {
     transform-origin: 0% 0%;
-  }
+}
   
-  #menuToggle span:nth-last-child(2)
-  {
+.menuToggle span:nth-last-child(2) {
     transform-origin: 0% 100%;
-  }
+}
   
-  #menuToggle input:checked ~ span
-  {
+.menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-3.5px, -1px);
     background: #36383F;
     box-shadow: none;
-  }
-  #menuToggle input:checked ~ span:nth-last-child(3)
-  {
+}
+
+.menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
-  }
+}
   
-  #menuToggle input:checked ~ span:nth-last-child(2)
-  {
+.menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
-  }
+}
   
-  #menu
-  {
+.menu {
     position: fixed;
     height: calc(100vh - 100px);
     box-shadow: 0 0 10px #5b5c5e;
@@ -253,31 +191,16 @@ body{
     transform-origin: 0% 0%;
     transform: translate(100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-  }
+}
 
-  @media screen and (max-width: 500px) {
-    #menu {
-        width: calc(100vw - 98px);
-        margin-left: calc(-100vw + 54px);
-    }
-}
-  
-@media screen and (min-width: 501px) {
-    #menu {
-        width: 300px;
-        margin-left: -345px;
-    }
-}
-  #menu li
-  {
+.menu li {
     padding: 10px 0;
     transition-delay: 2s;
-  }
-  
-  #menuToggle input:checked ~ ul
-  {
+}
+
+.menuToggle input:checked ~ ul {
     transform: none;
-  }
+}
 
 /* Header */
 
@@ -310,27 +233,6 @@ p{
     font-size: 1%;
 }
 
-@media screen and (max-width: 700px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-width: 701px) and (max-width: 1024px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 35px;
-    }
-}
-
-@media screen and (min-width: 1025px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 35px;
-   }
-}
-
 .top-text{
     text-align: left;
     text-shadow: #ffce48 2px 2px 1px;
@@ -360,4 +262,102 @@ p{
     float: right;
     width: 50vw;
     height: auto;
+}
+
+/*Media Queries (Responsiveness)*/
+
+@media screen and (max-width: 700px) {
+    .header-background {
+        background-image: url(../images/HunterEyeCuriosities.jpeg);
+    }
+}
+
+@media screen and (min-width: 701px) and (max-width: 1024px) {
+    .header-background {
+        background-image: url(../images/Hunter.jpg);
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .header-background {
+	    background-image: url(../images/HunterAndCamGuitar.jpg);
+   }
+}
+
+@media (max-height: 360px){
+    .logo-top {
+        height: 42px;
+        width: 52px;
+    }
+}
+
+@media (min-height: 361px) and (max-height: 600px){
+    .logo-top {
+        height: 48px;
+        width: 60px;
+    }
+}
+
+@media (min-height: 601px){
+    .logo-top {
+        height: 64px;
+        width: 80px;
+    }
+}
+
+@media (max-width: 700px) and (min-height: 601px){
+    .logo-top {
+        height: 48px;
+        width: 60px;
+    }
+}
+
+@media (max-width: 500px) {
+    .menu {
+        width: calc(100vw - 98px);
+        margin-left: calc(-100vw + 54px);
+        padding-top: 100px;
+        padding-bottom: 0;
+        text-align: center;
+    }
+}
+  
+@media (min-width: 501px) {
+    .menu {
+        width: 300px;
+        margin-left: -345px;
+        padding-top: 100px;
+        padding-bottom: 0;
+    }
+}
+
+@media (max-width: 800px) and (max-height: 360px){
+    .menu {
+        width: calc(100vw - 98px);
+        margin-left: calc(-100vw + 54px);
+        padding-top: 45px;
+        padding-bottom: 55px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .from {
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 701px) and (max-width: 1024px) {
+    .from {
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+        font-size: 35px;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .from {
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+        font-size: 35px;
+   }
 }
