--- a/products/products.css
+++ b/products/products.css
@@ -6,8 +6,6 @@ body{
     display: none;
 }
 
-/* Background changes with resizing*/
-
 .header-background{
     margin: 0;
     background-position: center center;
@@ -30,10 +28,244 @@ body{
     align-items: center;
     justify-content: center;
 }
+
 .loader img{
     width: 250px;
     height: 250px;
 }
+
+.logo-top{
+    position: fixed;
+    z-index: 9999;
+    top: calc(10px + 1vh);
+    margin-left: calc(15px + 1vw);
+    background: url(../images/logo-cropped.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: drop-shadow(0 0 5px #0000002e)
+}
+
+#BtnContain{
+    display: none;
+    position: fixed;
+    height: 80px;
+    width: 80px;
+    bottom: 20px;
+    right: -35px;
+    border: none;
+    outline: none;
+    z-index: 999;
+    overflow: hidden;
+    border-radius: 50%;
+    background: url(../images/Top.png);
+    background-position: left;
+    background-repeat: none;
+    background-size: contain;
+    transition: ease .8s;
+    cursor: pointer;
+}
+
+#myBtn {
+    width: auto;
+    height: 80px;
+    align-items: left;
+    filter: invert(100%);
+    opacity: 1;
+    transition: opacity .2s linear;
+}
+  
+#myBtn:hover {
+    opacity: 0;
+}
+
+.menu li a {
+    text-decoration: none;
+    color: #FF624C;
+    opacity: 1;
+    font-family: 'work sans', sans serif;
+    font-size: 1.5em;
+    font-weight: 400;
+    transition: 200ms;
+}
+
+.menu li a:hover {
+    color: #ffce48;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+nav {
+    background-color: transparent;
+    height: 65px;
+    position: fixed;
+    top: 0;
+    width: 80px;
+    float: right;
+}
+
+.navbox {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    z-index: 999;
+    margin-bottom: -100vh;
+    position: fixed;
+    top: 0;
+}
+  
+.menuToggle {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+}
+  
+.menuToggle input {
+    display: flex;
+    width: 34px;
+    height: 32px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    margin-top: -10px;
+    margin-left: -2px;
+}
+  
+.menuToggle span {
+    display: flex;
+    width: 28px;
+    height: 2.5px;
+    margin-bottom: 4.2px;
+    position: relative;
+    background: #ffffff;
+    border-radius: 3px;
+    z-index: 1;
+    box-shadow: #FF614B 1.6px 1.6px 0px;
+    transform-origin: 4.4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+}
+  
+.menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+  
+.menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+  
+.menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-3.5px, -1px);
+    background: #36383F;
+    box-shadow: none;
+}
+
+.menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+  
+.menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+}
+  
+.menu {
+    position: fixed;
+    height: calc(100vh - 100px);
+    box-shadow: 0 0 10px #5b5c5e;
+    top: -16px;
+    padding: 50px;
+    padding-top: 100px;
+    padding-bottom: 0;
+    background-color: #F5F6FA;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+.menu li {
+    padding: 10px 0;
+    transition-delay: 2s;
+}
+
+.menuToggle input:checked ~ ul {
+    transform: none;
+}
+
+/* Header */
+
+.center-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 8vw;
+    letter-spacing: 10px;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+    white-space: nowrap;
+    z-index: 1;
+    text-shadow: 0px 0px 30px #000000;
+}
+
+/* Main content*/
+
+p{
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-size: 30px;
+}
+
+.from{
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    width: 10vw;
+    font-size: 1%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Media Queries (Responsiveness)*/
 
 @media screen and (max-width: 700px) {
     .header-background {
@@ -51,29 +283,6 @@ body{
     .header-background {
 	    background-image: url(../images/RecordShelfWall.jpg);
    }
-}
-
-.body-background{
-    width: 100%;
-    background-color: #ead392;
-    height: 200vh;
-    margin-bottom: -100vh;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    z-index: -999;
-}
-
-.logo-top{
-    position: fixed;
-    z-index: 999;
-    top: calc(10px + 1vh);
-    margin-left: calc(15px + 1vw);
-    background: url(../images/logo-cropped.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 9999;
 }
 
 @media (max-height: 360px){
@@ -104,251 +313,89 @@ body{
     }
 }
 
-#BtnContain{
-    display: none;
-    position: fixed;
-    height: 80px;
-    width: 80px;
-    bottom: 20px;
-    right: -35px;
-    border: none;
-    outline: none;
-    z-index: 999;
-    overflow: hidden;
-    border-radius: 50%;
-    background: url(../images/Top.png);
-    background-position: left;
-    background-repeat: none;
-    background-size: contain;
-    transition: ease .8s;
-    cursor: pointer;
-}
-
-#myBtn {
-    width: auto;
-    height: 80px;
-    align-items: left;
-    filter: invert(100%);
-    opacity: 1;
-    transition: opacity .2s linear;
-  }
-  
-  #myBtn:hover {
-    opacity: 0;
-  }
-
-#menu li a {
-    text-decoration: none;
-    color: #FF624C;
-    opacity: 1;
-    font-family: 'work sans', sans serif;
-    font-size: 1.5em;
-    font-weight: 400;
-    transition: 200ms;
-  }
-#menu li a:hover {
-    color: #ffce48;
-  }
-  ul {
-    padding: 0;
-    list-style-type: none;
-  }
-
-  nav {
-    background-color: transparent;
-    height: 65px;
-    position: fixed;
-    top: 0;
-    width: 80px;
-    float: right;
-  }
-
-.navbox{
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
-    margin-bottom: -100vh;
-    position: fixed;
-    top: 0;
-}
-  
-  #menuToggle {
-    position: fixed;
-    top: 25px;
-    right: 25px;
-    z-index: 1;
-    -webkit-user-select: none;
-    user-select: none;
-  }
-  
-  #menuToggle input
-  {
-    display: flex;
-    width: 34px;
-    height: 32px;
-    position: absolute;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 2;
-    margin-top: -10px;
-    margin-left: -2px;
-  }
-  
-  #menuToggle span
-  {
-    display: flex;
-    width: 28px;
-    height: 2.5px;
-    margin-bottom: 4.2px;
-    position: relative;
-    background: #ffffff;
-    border-radius: 3px;
-    z-index: 1;
-    box-shadow: #FF614B 1.6px 1.6px 0px;
-    transform-origin: 4.4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
-  }
-  
-  #menuToggle span:first-child
-  {
-    transform-origin: 0% 0%;
-  }
-  
-  #menuToggle span:nth-last-child(2)
-  {
-    transform-origin: 0% 100%;
-  }
-  
-  #menuToggle input:checked ~ span
-  {
-    opacity: 1;
-    transform: rotate(45deg) translate(-3.5px, -1px);
-    background: #36383F;
-    box-shadow: none;
-  }
-  #menuToggle input:checked ~ span:nth-last-child(3)
-  {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-  
-  #menuToggle input:checked ~ span:nth-last-child(2)
-  {
-    transform: rotate(-45deg) translate(0, -1px);
-  }
-  
-  #menu
-  {
-    position: fixed;
-    height: calc(100vh - 100px);
-    box-shadow: 0 0 10px #5b5c5e;
-    top: -16px;
-    padding: 50px;
-    padding-top: 100px;
-    padding-bottom: 0;
-    background-color: #F5F6FA;
-    -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
-    transform: translate(100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-  }
-
-  @media screen and (max-width: 500px) {
-    #menu {
+@media (max-width: 500px) {
+    .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
+        padding-top: 100px;
+        padding-bottom: 0;
+        text-align: center;
     }
 }
   
-@media screen and (min-width: 501px) {
-    #menu {
+@media (min-width: 501px) {
+    .menu {
         width: 300px;
         margin-left: -345px;
+        padding-top: 100px;
+        padding-bottom: 0;
     }
 }
-  #menu li
-  {
-    padding: 10px 0;
-    transition-delay: 2s;
-  }
-  
-  #menuToggle input:checked ~ ul
-  {
-    transform: none;
-  }
 
-/* Header */
-
-.center-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 8vw;
-    letter-spacing: 10px;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    color: white;
-    font-weight: bold;
-    display: inline-block;
-    white-space: nowrap;
-    z-index: 1;
-    text-shadow: 0px 0px 30px #000000;
-}
-
-/* Header */
-
-.center-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 75px;
-    letter-spacing: 10px;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    color: white;
-    font-weight: bold;
-    display: inline-block;
-    white-space: nowrap;
-    z-index: 1;
-    text-shadow: 0px 0px 30px black;
-}
-
-/* Main content*/
-
-p{
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    font-size: 30px;
-}
-
-.from{
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    font-size: 50px;
+@media (max-width: 800px) and (max-height: 360px){
+    .menu {
+        width: calc(100vw - 98px);
+        margin-left: calc(-100vw + 54px);
+        padding-top: 45px;
+        padding-bottom: 55px;
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 700px) {
     .from {
         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 50px;
+        font-size: 20px;
     }
 }
 
 @media screen and (min-width: 701px) and (max-width: 1024px) {
     .from {
         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 50px;
+        font-size: 35px;
     }
 }
 
 @media screen and (min-width: 1025px) {
     .from {
         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 50px;
+        font-size: 35px;
    }
 }
 
-img{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section-container img{
     border-radius: 50%;
+  margin-top: 100px;
+  width: 19%;
+}
+
+.section-container{
+	height: 600px;
+	position: relative;
 }
