--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@ body{
     z-index: -999;
 }
 
+.blur {
+    filter: blur(10px);
+    -webkit-filter: blur(10px);
+}
+
 .loader {
     position: fixed;
     left: 0px;
@@ -39,78 +44,30 @@ body{
 }
 
 
-/*Setting Background to fit browser window*/
 
-@media screen and (max-width: 700px) {
-    .header-background {
-        background-image: url(images/Records.jpg);
-    }
-}
-
-@media screen and (min-width: 701px) and (max-width: 1024px) {
-    .header-background {
-        background-image: url(images/PolaroidWall.jpg);
-    }
-}
-
-@media screen and (min-width: 1025px){
-    .header-background {
-	    background-image: url(images/RecordWall.jpg);
-   }
-}
 
 
 /*Content*/
 
-.body-background{
-    height: 1000px;
+.placeholder{
+    height: 300px;
     width: 100%;
     background-color: #ffffff;
 }
 
 
 
-/*Record Animation: Scroll*/
+/*Record Animation*/
 
 .record-stack{
     width: 100vw;
     z-index: 1;
 }
 
-@media (max-height: 360px){
-    .record-stack {
-        margin-top: calc(50vh - 50px);
-        height: calc(150vh + 250px);
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .record-stack {
-        margin-top: calc(50vh - 75px);
-        height: calc(150vh + 375px);
-    }
-}
-
-@media (min-height: 601px){
-    .record-stack {
-        margin-top: calc(50vh - 100px);
-        height: calc(150vh + 500px);
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .record-stack {
-        margin-top: calc(50vh - 75px);
-        height: calc(150vh + 75px);
-    }
-}
-
-
-
 /*Record Animation: Logo Cover*/
 
 .cover {
-    z-index: -1;
+    z-index: 4;
     text-align: center;
     position: -webkit-sticky;
     position: sticky;
@@ -120,138 +77,13 @@ body{
     margin-bottom: -4px;
 }
 
-@media (max-height: 360px){
-    .cover img{
-        height: 100px;
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .cover img{
-        height: 150px;
-    }
-}
-
-@media (min-height: 601px){
-    .cover img{
-        height: 200px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .cover img{
-        height: 150px;
-    }
-}
-
-
-
 /*Record Animation: Sleeve*/
 
 .sleeve {
     position: -webkit-sticky;
     position: sticky;
-    z-index: -2;
+    z-index: 3;
     text-align: center;
-}
-
-
-@media (max-height: 360px){
-    .sleeve {
-        top: calc(50vh - 50px);
-        margin-top: -100px;
-        height: calc(100vh + 200px);
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .sleeve {
-        top: calc(50vh - 75px);
-        margin-top: -150px;
-        height: calc(100vh + 300px);
-    }
-}
-
-@media (min-height: 601px){
-    .sleeve {
-        top: calc(50vh - 100px);
-        margin-top: -200px;
-        height: calc(100vh + 400px);
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .sleeve {
-        top: calc(50vh - 75px);
-        margin-top: -150px;
-        height: calc(100vh + 75px);
-    }
-}
-
-.sleeve img {
-    margin-bottom: -4px;
-}
-
-@media (max-height: 360px){
-    .sleeve img {
-        height: 100px;
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .sleeve img {
-        height: 150px;
-    }
-}
-
-@media (min-height: 601px){
-    .sleeve img {
-        height: 200px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .sleeve img {
-        height: 150px;
-    }
-}
-
-
-/*Record Animation: Record*/
-
-.record{
-position: -webkit-sticky;
-position: sticky;
-z-index: -3;
-text-align: center;
-}
-
-@media (max-height: 360px){
-    .record {
-        top: calc(50vh - 50px);
-        margin-top: calc(-100vh - 200px);
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .record {
-        top: calc(50vh - 75px);
-        margin-top: calc(-100vh - 300px);
-    }
-}
-
-@media (min-height: 601px){
-    .record {
-        top: calc(50vh - 100px);
-        margin-top: calc(-100vh - 400px);
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .record {
-        top: calc(50vh - 75px);
-        margin-top: calc(-100vh - 75px);
-    }
 }
 
 .record img{
@@ -259,105 +91,34 @@ text-align: center;
     margin-top: -0.4px;
 }
 
-@media (max-height: 360px){
-    .record img {
-        height: 100px;
+/*Record Animation: Record*/
+
+.record{
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 2;
+    text-align: center;
     }
+
+.record img{
+    margin-bottom: -4px;
+    margin-top: -0.4px;
 }
-
-@media (min-height: 361px) and (max-height: 600px){
-    .record img {
-        height: 150px;
-    }
-}
-
-@media (min-height: 601px){
-    .record img {
-        height: 200px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .record img {
-        height: 150px;
-    }
-}
-
-
 
 /*Record Animation: Record Player*/
 
 .player{
     background-color: transparent;
-    z-index: -5;
+    z-index: 1;
     text-align: center;
 }
 
-@media (max-height: 360px){
-    .player {
-        margin-top: -150.4px;
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .player {
-        margin-top: -200.8px;
-    }
-}
-
-@media (min-height: 601px){
-    .player {
-        margin-top: -300.8px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .player {
-        margin-top: -225.8px;
-    }
-}
-
 .player img{
-    z-index: -5;
     position: relative;
 
 }
 
-@media (max-height: 360px){
-    .player img {
-        height: 100px;
-        padding-bottom: 50px;
-        padding-top: 50px;
-        padding-left: 33.3px;
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .player img {
-        height: 150px;
-        padding-bottom: 50px;
-        padding-top: 50px;
-        padding-left: 49.8px;
-    }
-}
-
-@media (min-height: 601px){
-    .player img {
-        height: 200px;
-        padding-bottom: 100px;
-        padding-top: 100px;
-        padding-left: 66.2px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .player img {
-        height: 150px;
-        padding-bottom: 75px;
-        padding-top: 75px;
-        padding-left: 49.8px;
-    }
-}
+/*Nav Bar Logo*/
 
 .logo-top{
     position: fixed;
@@ -368,34 +129,6 @@ text-align: center;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-@media (max-height: 360px){
-    .logo-top {
-        height: 42px;
-        width: 52px;
-    }
-}
-
-@media (min-height: 361px) and (max-height: 600px){
-    .logo-top {
-        height: 48px;
-        width: 60px;
-    }
-}
-
-@media (min-height: 601px){
-    .logo-top {
-        height: 64px;
-        width: 80px;
-    }
-}
-
-@media (max-width: 700px) and (min-height: 601px){
-    .logo-top {
-        height: 48px;
-        width: 60px;
-    }
 }
 
 
@@ -421,9 +154,6 @@ text-align: center;
     cursor: pointer;
 }
 
-
-/*NavBar*/
-
 #myBtn {
     width: auto;
     height: 80px;
@@ -437,7 +167,9 @@ text-align: center;
     opacity: 0;
 }
 
-#menu li a {
+/*NavBar*/
+
+.menu li a {
     text-decoration: none;
     color: #FF624C;
     opacity: 1;
@@ -446,9 +178,15 @@ text-align: center;
     font-weight: 400;
     transition: 200ms;
     }
-#menu li a:hover {
+
+.menu li a:hover {
     color: #ffce48;
 }
+
+.menu li:fist-child {
+    color: blue;
+}
+
 ul {
     padding: 0;
     list-style-type: none;
@@ -473,7 +211,7 @@ nav {
     top: 0;
 }
   
-#menuToggle {
+.menuToggle {
     position: fixed;
     top: 25px;
     right: 25px;
@@ -482,7 +220,7 @@ nav {
     user-select: none;
 }
   
-#menuToggle input {
+.menuToggle input {
     display: flex;
     width: 34px;
     height: 32px;
@@ -494,7 +232,7 @@ nav {
     margin-left: -2px;
 }
   
-#menuToggle span {
+.menuToggle span {
     display: flex;
     width: 28px;
     height: 2.5px;
@@ -510,38 +248,36 @@ nav {
                 opacity 0.55s ease;
 }
   
-#menuToggle span:first-child {
+.menuToggle span:first-child {
     transform-origin: 0% 0%;
 }
   
-#menuToggle span:nth-last-child(2) {
+.menuToggle span:nth-last-child(2) {
     transform-origin: 0% 100%;
 }
   
-#menuToggle input:checked ~ span {
+.menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-3.5px, -1px);
     background: #36383F;
     box-shadow: none;
 }
 
-#menuToggle input:checked ~ span:nth-last-child(3) {
+.menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
   
-#menuToggle input:checked ~ span:nth-last-child(2) {
+.menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
 }
   
-#menu {
+.menu {
     position: fixed;
     height: calc(100vh - 100px);
     box-shadow: 0 0 10px #5b5c5e;
     top: -16px;
     padding: 50px;
-    padding-top: 100px;
-    padding-bottom: 0;
     background-color: #F5F6FA;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
@@ -549,25 +285,244 @@ nav {
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-@media screen and (max-width: 500px) {
-    #menu {
-        width: calc(100vw - 98px);
-        margin-left: calc(-100vw + 54px);
-    }
-}
-  
-@media screen and (min-width: 501px) {
-    #menu {
-        width: 300px;
-        margin-left: -345px;
-    }
-}
-
-#menu li {
+.menu li {
     padding: 10px 0;
     transition-delay: 2s;
 }
   
-#menuToggle input:checked ~ ul {
+.menuToggle input:checked ~ ul {
     transform: none;
+}
+
+/*Media Queries (Responsiveness)*/
+
+@media (max-width: 700px) {
+    .header-background {
+        background-image: url(images/Records.jpg);
+    }
+}
+
+@media (min-width: 701px) and (max-width: 1024px) {
+    .header-background {
+        background-image: url(images/PolaroidWall.jpg);
+    }
+}
+
+@media (min-width: 1025px){
+    .header-background {
+	    background-image: url(images/RecordWall.jpg);
+   }
+}
+
+@media (max-height: 360px){
+    .record-stack {
+        margin-top: calc(50vh - 50px);
+        height: calc(150vh + 250px);
+    }
+
+    .cover img{
+        height: 100px;
+    }
+
+    .sleeve {
+        top: calc(50vh - 50px);
+        margin-top: -100px;
+        height: calc(100vh + 200px);
+    }
+
+    .sleeve img {
+        height: 100px;
+    }
+
+    .record {
+        top: calc(50vh - 50px);
+        margin-top: calc(-100vh - 200px);
+    }
+
+    .record img {
+        height: 100px;
+    }
+
+    .player {
+        margin-top: -150.4px;
+    }
+
+    .player img {
+        height: 100px;
+        padding-bottom: 50px;
+        padding-top: 50px;
+        padding-left: 33.3px;
+    }
+
+    .logo-top {
+        height: 42px;
+        width: 52px;
+    }
+}
+
+@media (min-height: 361px) and (max-height: 600px){
+    .record-stack {
+        margin-top: calc(50vh - 75px);
+        height: calc(150vh + 375px);
+    }
+
+    .cover img{
+        height: 150px;
+    }
+
+    .sleeve {
+        top: calc(50vh - 75px);
+        margin-top: -150px;
+        height: calc(100vh + 300px);
+    }
+
+    .sleeve img {
+        height: 150px;
+    }
+
+    .record {
+        top: calc(50vh - 75px);
+        margin-top: calc(-100vh - 300px);
+    }
+
+    .record img {
+        height: 150px;
+    }
+
+    .player {
+        margin-top: -200.8px;
+    }
+
+    .player img {
+        height: 150px;
+        padding-bottom: 50px;
+        padding-top: 50px;
+        padding-left: 49.8px;
+    }
+
+    .logo-top {
+        height: 48px;
+        width: 60px;
+    }
+}
+
+@media (min-height: 601px){
+    .record-stack {
+        margin-top: calc(50vh - 100px);
+        height: calc(150vh + 500px);
+    }
+
+    .cover img{
+        height: 200px;
+    }
+
+    .sleeve {
+        top: calc(50vh - 100px);
+        margin-top: -200px;
+        height: calc(100vh + 400px);
+    }
+
+    .sleeve img {
+        height: 200px;
+    }
+    
+    .record {
+        top: calc(50vh - 100px);
+        margin-top: calc(-100vh - 400px);
+    }
+
+    .record img {
+        height: 200px;
+    }
+
+    .player {
+        margin-top: -300.8px;
+    }
+
+    .player img {
+        height: 200px;
+        padding-bottom: 100px;
+        padding-top: 100px;
+        padding-left: 66.2px;
+    }
+
+    .logo-top {
+        height: 64px;
+        width: 80px;
+    }
+}
+
+@media (max-width: 700px) and (min-height: 601px){
+    .record-stack {
+        margin-top: calc(50vh - 75px);
+        height: calc(150vh + 75px);
+    }
+
+    .cover img{
+        height: 150px;
+    }
+
+    .sleeve {
+        top: calc(50vh - 75px);
+        margin-top: -150px;
+        height: calc(100vh + 75px);
+    }
+
+    .sleeve img {
+        height: 150px;
+    }
+
+    .record {
+        top: calc(50vh - 75px);
+        margin-top: calc(-100vh - 75px);
+    }
+
+    .record img {
+    height: 150px;
+    }
+
+    .player {
+        margin-top: -225.8px;
+    }
+
+    .player img {
+        height: 150px;
+        padding-bottom: 75px;
+        padding-top: 75px;
+        padding-left: 49.8px;
+    }
+
+    .logo-top {
+        height: 48px;
+        width: 60px;
+    }
+}
+
+@media (max-width: 500px) {
+    .menu {
+        width: calc(100vw - 98px);
+        margin-left: calc(-100vw + 54px);
+        padding-top: 100px;
+        padding-bottom: 0;
+        text-align: center;
+    }
+}
+  
+@media (min-width: 501px) {
+    .menu {
+        width: 300px;
+        margin-left: -345px;
+        padding-top: 100px;
+        padding-bottom: 0;
+    }
+}
+
+@media (max-width: 800px) and (max-height: 360px){
+    .menu {
+        width: calc(100vw - 98px);
+        margin-left: calc(-100vw + 54px);
+        padding-top: 45px;
+        padding-bottom: 55px;
+        text-align: center;
+    }
 }
