--- a/about/about.css
+++ b/about/about.css
@@ -305,19 +305,10 @@ p{
     }
 }
 
-@media (max-width: 700px) and (min-height: 601px){
-    .logo-top {
-        height: 48px;
-        width: 60px;
-    }
-}
-
 @media (max-width: 500px) {
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
-        padding-top: 100px;
-        padding-bottom: 0;
         text-align: center;
     }
 }
@@ -326,15 +317,21 @@ p{
     .menu {
         width: 300px;
         margin-left: -345px;
-        padding-top: 100px;
-        padding-bottom: 0;
     }
 }
 
-@media (max-width: 800px) and (max-height: 360px){
+@media (max-width: 500px) and (max-height: 360px){
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
+        padding-top: 45px;
+        padding-bottom: 55px;
+        text-align: center;
+    }
+}
+
+@media (max-height: 360px){
+    .menu {
         padding-top: 45px;
         padding-bottom: 55px;
         text-align: center;
