--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,8 @@ nav {
     box-shadow: 0 0 10px #5b5c5e;
     top: -16px;
     padding: 50px;
+    padding-top: 100px;
+    padding-bottom: 0;
     background-color: #F5F6FA;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
@@ -502,8 +504,6 @@ nav {
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
-        padding-top: 100px;
-        padding-bottom: 0;
         text-align: center;
     }
 }
@@ -512,15 +512,21 @@ nav {
     .menu {
         width: 300px;
         margin-left: -345px;
-        padding-top: 100px;
-        padding-bottom: 0;
     }
 }
 
-@media (max-width: 800px) and (max-height: 360px){
+@media (max-width: 500px) and (max-height: 360px){
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
+        padding-top: 45px;
+        padding-bottom: 55px;
+        text-align: center;
+    }
+}
+
+@media (max-height: 360px){
+    .menu {
         padding-top: 45px;
         padding-bottom: 55px;
         text-align: center;
