--- a/about/about.css
+++ b/about/about.css
@@ -1,5 +1,7 @@
 body{
-    margin: 0;
+	overflow-x: hidden;
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -79,18 +81,98 @@ body{
     opacity: 0;
 }
 
+.menu-container{
+	height: calc(100vh - 50px);
+	overflow-y: scroll;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-top: -50px;
+	padding-top: 50px;
+	margin-bottom: 50px;
+	padding-bottom:-50px;
+}
+
+.menu li{
+	height: 10%;
+	min-height: 50px;
+	transition-delay: 2s;
+}
+
 .menu li a {
     text-decoration: none;
     color: #FF624C;
     opacity: 1;
-    font-family: 'work sans', sans serif;
     font-size: 1.5em;
     font-weight: 400;
     transition: 200ms;
 }
 
 .menu li a:hover {
+	cursor: pointer;
+	color: rgb(190, 24, 2);
+}
+
+.menu li a i {
+    text-decoration: none;
+    color: #FF624C;
+    opacity: 1;
+    font-size: 1em;
+    font-weight: 150;
+    transition: 200ms;
+}
+
+.nav-animate a{
+	list-style: none;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.nav-animate a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #FF614B;
+	transition: all 0.3s ease-in-out;
+}
+
+.nav-animate a:hover::after{
+	transform: scaleX(1);
+}
+
+.socials{
+	margin-top: 4vh;
+	margin-bottom: 4vh;
+}
+
+.socials li{
+	display: inline-block;
+	width: 15%;
+}
+
+#insta {
+	font-weight: 600;
+}
+
+.socials li a:hover {
     color: #ffce48;
+	cursor: pointer;
+}
+
+.socials li a i:hover {
+    color: #ffce48;
+	cursor: pointer;
+}
+
+.nav-contact {
+	text-align: left;
+	font-size: 12px;
+	margin-left: 10%;
+	margin-top: 20px;
 }
 
 ul {
@@ -107,14 +189,12 @@ nav {
     float: right;
 }
 
-.navbox {
+.navbox{
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
     margin-bottom: -100vh;
     position: fixed;
     top: 0;
+	z-index: 999;
 }
   
 .menuToggle {
@@ -144,10 +224,10 @@ nav {
     height: 2.5px;
     margin-bottom: 4.2px;
     position: relative;
-    background: #ffffff;
+    background: #FF614B;
     border-radius: 3px;
     z-index: 1;
-    box-shadow: #FF614B 1.6px 1.6px 0px;
+    box-shadow: white 1.6px 1.6px 0px;
     transform-origin: 4.4px 0px;
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
@@ -180,26 +260,113 @@ nav {
   
 .menu {
     position: fixed;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 50px);
     box-shadow: 0 0 10px #5b5c5e;
     top: -16px;
     padding: 50px;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 0;
     background-color: #F5F6FA;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
     transform: translate(100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	text-align: center;
 }
-
-.menu li {
-    padding: 10px 0;
-    transition-delay: 2s;
-}
-
+  
 .menuToggle input:checked ~ ul {
     transform: none;
+}
+
+/*Footer*/
+
+footer{
+	background-color: #333333;
+	display: flex;
+	width: 100vw;
+	padding-top: 60px;
+}
+
+.footer-nav ul{
+	padding-bottom: 40px;
+}
+
+.footer-nav ul li{
+	display: inline-block;
+	text-transform: uppercase;
+    margin-right: 14px;
+}
+
+.footer-nav ul li a{
+	color: #469297;
+	list-style: none;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.footer-nav ul li a:hover{
+	color: #469297;
+}
+
+.footer-nav ul li a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #FF614B;
+	transition: all 0.3s ease-in-out;
+}
+
+.footer-nav ul li a:hover::after{
+	transform: scaleX(1);
+}
+
+.footer-container{
+	text-align: center;
+	max-width: 600px;
+	padding-left: 60px;
+    padding-right: 60px;
+	margin: auto;
+}
+
+.footer-info{
+	text-align: center;
+}
+
+.footer-info p{
+	margin-bottom: 2px;
+	color: rgb(239, 239, 239);
+	letter-spacing: 1px;
+	text-decoration: none;
+	font-size: 18px;
+	letter-spacing: 3px;
+	color: rgb(239, 239, 239);
+	line-height: 50px;
+}
+
+.footer-info a{
+	font-size: 16px;
+	letter-spacing: 4px;
+	color: rgb(239, 239, 239);
+	line-height: 25px;
+	text-decoration: underline;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 5px;
+}
+
+.footer-links{
+	margin-top: 40px;
+}
+
+#divider{
+	font-size: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	text-decoration: none;
 }
 
 /* Header */
@@ -211,7 +378,6 @@ nav {
     transform: translate(-50%, -50%);
     font-size: 8vw;
     letter-spacing: 10px;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
     color: white;
     font-weight: bold;
     display: inline-block;
@@ -222,46 +388,68 @@ nav {
 
 /* Main content*/
 
-p{
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    font-size: 30px;
+.content{
+	margin-right: 5vw;
+	margin-left: 5vw;
+	width: 90vw
 }
 
 .from{
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    width: 10vw;
-    font-size: 1%;
+    width: 100%;
+    font-size: 3vw;
+	text-align: center;
 }
 
-.top-text{
-    text-align: left;
-    text-shadow: #ffce48 2px 2px 1px;
+.contR{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
 }
 
-.top-image img{
-    float: right;
-    width: 50vw;
-    height: auto;
+.contL{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 1rem;
 }
 
-.middle-text{
-    text-align: right;
+.box{
+    flex: 50%;
+    text-align: center;
+	width: 45vw;
+	margin-top: 40px;
 }
 
-.middle-image img{
-    float: left;
-    width: 50vw;
-    height: auto;
+.box p{
+    font-size: 3vw;
+	width: 42vw;
 }
 
-.bottom-text{
-    text-align: left;
+.img-cont {
+    width: 45vw;
 }
 
-.bottom-image img{
-    float: right;
-    width: 50vw;
-    height: auto;
+.box img{
+	width: 42vw;
+	transition: ease;
+    transition: all .3s;
+}
+
+.box:hover img{
+    width: 45vw;
+    transition: ease;
+    transition: all .3s;
+}
+
+@keyframes idle {
+    0% {
+        transform: translate(0, 0px);
+    }
+    50% {
+        transform: translate(0, 5px);
+    }
+    100% {
+        transform: translate(0, -0px);
+    }
 }
 
 /*Media Queries (Responsiveness)*/
@@ -280,7 +468,7 @@ p{
 
 @media screen and (min-width: 1025px) {
     .header-background {
-	    background-image: url(../images/HunterAndCamGuitar.jpg);
+        background-image: url(../images/HunterAndCamGuitar.jpg);
    }
 }
 
@@ -338,23 +526,17 @@ p{
     }
 }
 
-@media screen and (max-width: 700px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 20px;
+@media (max-height: 400px){
+    .cont{
+        display: flex;
+        margin-bottom: 1rem;
     }
-}
-
-@media screen and (min-width: 701px) and (max-width: 1024px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 35px;
+    .text{
+        width: 100%;
+        flex: 100%;
+        padding: 1rem;
+        text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
     }
-}
-
-@media screen and (min-width: 1025px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 35px;
-   }
 }
