--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     overflow-x: hidden;
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -25,6 +26,8 @@ body{
     filter: blur(10px);
     -webkit-filter: blur(10px);
 }
+
+/*Loading screen*/
 
 .loader {
     position: fixed;
@@ -54,8 +57,6 @@ body{
     width: 100%;
     background-color: #ffffff;
 }
-
-
 
 /*Record Animation*/
 
@@ -169,6 +170,23 @@ body{
 
 /*NavBar*/
 
+.menu-container{
+	height: calc(100vh - 50px);
+	overflow-y: scroll;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-top: -50px;
+	padding-top: 50px;
+	margin-bottom: 50px;
+	padding-bottom:-50px;
+}
+
+.menu li{
+	height: 10%;
+	min-height: 50px;
+	transition-delay: 2s;
+}
+
 .menu li a {
     text-decoration: none;
     color: #FF624C;
@@ -177,14 +195,74 @@ body{
     font-size: 1.5em;
     font-weight: 400;
     transition: 200ms;
-    }
-
-.menu li a:hover {
-    color: #ffce48;
 }
 
-.menu li:fist-child {
-    color: blue;
+.menu li a:hover {
+	cursor: pointer;
+	color: rgb(190, 24, 2);
+}
+
+.menu li a i {
+    text-decoration: none;
+    color: #FF624C;
+    opacity: 1;
+    font-size: 1em;
+    font-weight: 150;
+    transition: 200ms;
+}
+
+.nav-animate a{
+	list-style: none;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.nav-animate a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #FF614B;
+	transition: all 0.3s ease-in-out;
+}
+
+.nav-animate a:hover::after{
+	transform: scaleX(1);
+}
+
+.socials{
+	margin-top: 4vh;
+	margin-bottom: 4vh;
+}
+
+.socials li{
+	display: inline-block;
+	width: 15%;
+}
+
+#insta {
+	font-weight: 600;
+}
+
+.socials li a:hover {
+    color: #ffce48;
+	cursor: pointer;
+}
+
+.socials li a i:hover {
+    color: #ffce48;
+	cursor: pointer;
+}
+
+.nav-contact {
+	text-align: left;
+	font-size: 12px;
+	margin-left: 10%;
+	margin-top: 20px;
 }
 
 ul {
@@ -203,12 +281,10 @@ nav {
 
 .navbox{
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
     margin-bottom: -100vh;
     position: fixed;
     top: 0;
+	z-index: 999;
 }
   
 .menuToggle {
@@ -274,26 +350,113 @@ nav {
   
 .menu {
     position: fixed;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 50px);
     box-shadow: 0 0 10px #5b5c5e;
     top: -16px;
     padding: 50px;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 0;
     background-color: #F5F6FA;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
     transform: translate(100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-.menu li {
-    padding: 10px 0;
-    transition-delay: 2s;
+	text-align: center;
 }
   
 .menuToggle input:checked ~ ul {
     transform: none;
+}
+
+/*Footer*/
+
+footer{
+	background-color: #333333;
+	display: flex;
+	width: 100vw;
+	padding-top: 60px;
+}
+
+.footer-nav ul{
+	padding-bottom: 40px;
+}
+
+.footer-nav ul li{
+	display: inline-block;
+	text-transform: uppercase;
+    margin-right: 14px;
+}
+
+.footer-nav ul li a{
+	color: #469297;
+	list-style: none;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.footer-nav ul li a:hover{
+	color: #469297;
+}
+
+.footer-nav ul li a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #FF614B;
+	transition: all 0.3s ease-in-out;
+}
+
+.footer-nav ul li a:hover::after{
+	transform: scaleX(1);
+}
+
+.footer-container{
+	text-align: center;
+	max-width: 600px;
+	padding-left: 60px;
+    padding-right: 60px;
+	margin: auto;
+}
+
+.footer-info{
+	text-align: center;
+}
+
+.footer-info p{
+	margin-bottom: 2px;
+	color: rgb(239, 239, 239);
+	letter-spacing: 1px;
+	text-decoration: none;
+	font-size: 18px;
+	letter-spacing: 3px;
+	color: rgb(239, 239, 239);
+	line-height: 50px;
+}
+
+.footer-info a{
+	font-size: 16px;
+	letter-spacing: 4px;
+	color: rgb(239, 239, 239);
+	line-height: 25px;
+	text-decoration: underline;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 5px;
+}
+
+.footer-links{
+	margin-top: 40px;
+}
+
+#divider{
+	font-size: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	text-decoration: none;
 }
 
 /*Media Queries (Responsiveness)*/
@@ -504,7 +667,6 @@ nav {
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
-        text-align: center;
     }
 }
   
@@ -521,7 +683,6 @@ nav {
         margin-left: calc(-100vw + 54px);
         padding-top: 45px;
         padding-bottom: 55px;
-        text-align: center;
     }
 }
 
@@ -529,6 +690,5 @@ nav {
     .menu {
         padding-top: 45px;
         padding-bottom: 55px;
-        text-align: center;
     }
 }
